--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-telegram>=0.0.1
+pyTelegramBotAPI>=4.3.1
+python-telegram-bot>=13.8.1
 Telethon>=1.24.0
 pandas>=1.4.0
 mysql-connector-python>=8.0.28
